deleted show links from html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <img class="nav-logo" src="/images/logo.svg" alt="">
                     <button type="button" class="nav-toggle" id="nav-toggle"><i class="fas fa-bars"></i></button>
                 </div>
-                <ul class="nav-links show-links" id="nav-links">
+                <ul class="nav-links" id="nav-links">
                     <li>
                         <a class="nav-link scroll-link" href="#home">home</a></li>
                     <li>
